[tool.poetry]
name = "makemore"
version = "0.1.0"
description = ""
authors = ["Øyvind Torgersrud <oyvind.torgersrud@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
